--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "phpstan/phpstan-strict-rules": "^1.5",
     "laravel/pint": "^1.15",
     "pestphp/pest": "^2.34",
-    "symfony/http-client": "^7.0"
+    "symfony/http-client": "^7.0",
+    "php-http/mock-client": "^1.6"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -48,7 +49,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-
+      "JustSteveKing\\Ollama\\Tests\\": "tests/"
     }
   },
   "config": {
